samples/_failures_safe/1761154903_1d7374_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19ab0397.c: In function ‘main’:
./samples/SAFE/__tmp_19ab0397.c:156:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  156 |     size_t num
      |     ^~~~~~
./samples/SAFE/__tmp_19ab0397.c:156:5: error: expected declaration or statement at end of input
